--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Lista de Trabajos</h1>
             
             <li><a href="https://santiago2211111.github.io/PROYECTO/">1.  cancionero</a></li>
-            <li><a href="https://santiago2211111.github.io/mecanica2/">2.  mecanica</a></li>
+  <li><a href="https://santiago2211111.github.io/meca/">2. Mecanica</a></li>
             <li><a href="https://santiago2211111.github.io/PROYECTO/">3.  Parcial 2</a></li>
             <li><a href="https://santiago2211111.github.io/PROYECTO/">4.  Ordinario</a></li>
             
